# aitoolkit-workshop-pydata-ams25

./: .env  .gitignore  README.md  TASKS.md  export_pydata_schedule.ipynb  main.py  pyproject.toml  run_latest_tests.sh
.jbeval/configs/: .metadata  after.yaml  before.yaml  before_copy.json  pydata.json  pydata.yaml
.jbeval/datasets/: .metadata  pydata.json
.jbeval/runners/: main.json
agent/: __init__.py  data_model.py  graph.py  graph_state.py  llm_model.py  react.prompt  react_agent.py  run_dir.py  tools.py
answers/task_1/: tools.py
answers/task_2/: tools.py
answers/task_3/: tools.py
answers/task_4/: tools.py
answers/task_agentic_retrieval/: tools.py
data/: pydata_amsterdam_2025_descriptions.json  pydata_amsterdam_2025_schedule.csv  pydata_amsterdam_2025_schedule.json  pydata_amsterdam_2025_speakers_description.json
