[project]
name = "aitoolkit-workshop-pydata-ams25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pytest>=8.4.0",
]
